[gd_scene load_steps=14 format=2]

[ext_resource path="res://items/Cross/cross.png" type="Texture" id=1]
[ext_resource path="res://items/item.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/Daydream.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/hud/ui_gold.png" type="Texture" id=4]
[ext_resource path="res://items/shadow.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "floating"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=6]
radius = 28.0045

[sub_resource type="CircleShape2D" id=7]
radius = 18.0278

[node name="Item" type="Node2D"]
position = Vector2( 83, 70 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 2 )
anims/floating = SubResource( 1 )

[node name="ItemFloatingText" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Price" type="Label" parent="ItemFloatingText"]
margin_left = -58.0
margin_top = -37.0
margin_right = -26.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 3 )
text = "30"

[node name="GoldIcon" type="TextureRect" parent="ItemFloatingText"]
margin_left = -61.0
margin_top = -59.0
margin_right = -29.0
margin_bottom = -27.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="ItemFloatingText"]
margin_left = -29.0
margin_top = -63.0
margin_right = 119.0
margin_bottom = -34.0

[node name="ItemName" type="Label" parent="ItemFloatingText/VBoxContainer2"]
margin_right = 148.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
text = "Priest's staff"

[node name="Description" type="Label" parent="ItemFloatingText/VBoxContainer2"]
margin_top = 15.0
margin_right = 148.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
text = "main weapon"

[node name="DecreaseDescription" type="Label" parent="ItemFloatingText/VBoxContainer2"]
modulate = Color( 0.823529, 0, 0, 1 )
margin_top = 28.0
margin_right = 148.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "-30% damage"

[node name="ShowItemData" type="Area2D" parent="."]
position = Vector2( 0, 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShowItemData"]
shape = SubResource( 6 )

[node name="BuyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuyArea"]
shape = SubResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -2, 31 )
texture = ExtResource( 5 )

[connection signal="area_entered" from="ShowItemData" to="." method="_on_ShowItemData_area_entered"]
[connection signal="area_exited" from="ShowItemData" to="." method="_on_ShowItemData_area_exited"]
[connection signal="area_entered" from="BuyArea" to="." method="_on_BuyArea_area_entered"]
